# time-audit

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: configure-nginx.yml  create-admin.yml  deploy.yml  setup-tls.yml
alembic/: env.py
alembic/versions/: 20260310_0001_create_users_table.py  20260310_0002_admin_seed_from_env.py  20260310_0003_create_audit_sessions_table.py  20260311_0004_add_analysis_columns_to_audit_sessions.py  20260313_0005_create_audit_session_time_entries_table.py
backend/: auth.py  database.py  logging_config.py  login_protection.py  main.py  models.py  public.py  schemas.py  security.py  settings.py
backend/clockify/: __init__.py  client.py  router.py  schemas.py  service.py
backend/private/: __init__.py  router.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: LoginView.vue  LogsView.vue  PublicReportReview.vue  SessionWorkspace.vue  UploadAudit.vue  UserManagement.vue  UserReportReview.vue
frontend/src/components/user-report-review/: CalendarDayView.vue  CalendarLegend.vue  CalendarMonthView.vue  CalendarWeekView.vue  DayEntriesDialog.vue  ReportAnalysisDialog.vue  ReportReviewHeader.vue  TaskDetailsDialog.vue  calendarUtils.js  (+1 more)
frontend/src/services/: api.js
frontend/src/utils/: calendarUtils.js
infrastructure/: cloud-init-fastapi-deploy.yaml  cloud-init-fastapi-nginx-tls.yaml  configure_nginx.sh  setup_tls.sh
scripts/: upsert_admin.py
time_audit/: __init__.py  core.py
(+6 files in other folders)
