[tool.poetry]
name = "time-audit"
version = "0.1.0"
description = ""
authors = ["David Fernandes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
ipython = "^8.25.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
